--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,20 +1,26 @@
-
 window:
-  opacity: 0.85
-  padding:
-    x: 10
-    y: 10
-  dynamic_padding: false
-  decorations: none
-
+  opacity: 0.96
+  # padding:
+  #   x: 3
+  #   y: 3
+  dynamic_padding: true
+  decorations: buttonless # options: full, none, transparent, or buttonless
+  dimensions:
+    columns: 100
+    lines: 44
 font:
   normal:
-    family: "Hack Nerd Font"
-  size: 17
-
+    family: "AnonymicePro Nerd Font"
+  size: 21
 shell:
-   program: /opt/homebrew/bin/fish
-
+  program: /opt/homebrew/bin/fish
 import:
   - ~/.config/alacritty/themes/TokyoNight.yml
   - ~/.config/alacritty/bindings.yml
+
+
+# please, don't mind the following
+  # I don't think these options work fully on my machine
+
+# mouse:
+  # hide_when_typing: true
