--- a/alacritty/bindings.yml
+++ b/alacritty/bindings.yml
@@ -1,3 +1,5 @@
+# \x02 = cntrl+b
+# \x01 = cntrl+a
 key_bindings:
   - { key: E, mods: Command, chars: "\x02\"" } # split tmux window vertically
   - { key: E, mods: Command|Shift, chars: "\x02%" } # split tmux window horizontally
