--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,16 +4,15 @@
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g escape-time 0         # zero-out escape time delay
-set -g history-limit 1000000 # increase history size (from 2,000)
+set -g history-limit 100000 # increase history size (from 2,000)
 set -g mouse on              # enable mouse support
-set -g s  
 
 set -g status-left-length 200          # increase length (from 10)
 set -g status-position top             # macOS / darwin style
 set -g status-right ''                 # blank
 set -g status-style 'bg=default'       # transparent
 
-bind-key x kill-pane      
+bind-key x kill-pane
 
 # tpm
 set -g @plugin 'tmux-plugins/tpm'
