Nov 2 - Major Update

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,15 +1,16 @@
 # change the <prefix> key ( configured with alacritty)
 # uncomment if not using alacritty
+# current prefix is C-b
 # set -g prefix C-a
 
-set -g base-index 1          # start indexing windows at 1 instead of 0
+set -g base-index 0          # start indexing windows at 1 instead of 0
 set -g escape-time 0         # zero-out escape time delay
 set -g history-limit 100000 # increase history size (from 2,000)
 set -g mouse on              # enable mouse support
 
 set -g status-left-length 200          # increase length (from 10)
-set -g status-position top             # macOS / darwin style
-set -g status-right ''                 # blank
+set -g status-position bottom             # macOS / darwin style
+set -g status-right 'bg=teal'                 # blank
 set -g status-style 'bg=default'       # transparent
 
 bind-key x kill-pane
